# climatic-data-preprocessing

./: README.md  pyproject.toml
data_preprocessing_scripts/: spi_central_amazon.ipynb  spi_northeast_brazil.ipynb  spi_pantanal.ipynb  spi_south_brazil.ipynb  spi_southeast_brazil.ipynb
data_sources_and_examples/: example.ipynb  intro_to_data_sources.ipynb  sst_data.ipynb
eof_analysis/: eofs_tests.ipynb
spi_analysis/: spi_meteo_data_implementation.ipynb  spi_my_implementation.ipynb
